--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: Flaming-31/flaming-reads-reimagined
   branch: main
+  auth_endpoint: https://api.decapcms.org/auth
+  app_id: Ov23liU4ThtPeGQhcTYl
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
