--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,10 +8,16 @@ backend:
 # Optional: Editorial workflow for content approval
 publish_mode: editorial_workflow
 
+# Media folders
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
 
+# ----------------------------
+# Collections
+# ----------------------------
+
 collections:
+
   - name: "products"
     label: "Books"
     folder: "content/books"
@@ -22,7 +28,7 @@ collections:
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Price", name: "price", widget: "number"}
-      - {label: "Category", name: "category", widget: "select", options: ["Theology", "Devotional", "Christian Living", "Bible Study", "Biography", "Children", "Youth", "Fiction", "Reference"]}
+      - {label: "Category", name: "category", widget: "select", options: ["Theology","Devotional","Christian Living","Bible Study","Biography","Children","Youth","Fiction","Reference"]}
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Featured", name: "featured", widget: "boolean", default: false}
       - {label: "Stock", name: "stock", widget: "number", default: 0}
