--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,10 +4,7 @@ backend:
   branch: main
   auth_endpoint: https://api.decapcms.org/auth
   app_id: Ov23liU4ThtPeGQhcTYl
-# backend:
-#   name: github
-#   repo: Flaming-31/flaming-reads-reimagined
-#   branch: main
+
 
 # Optional: Editorial workflow for content approval
 publish_mode: editorial_workflow
@@ -15,6 +12,11 @@ publish_mode: editorial_workflow
 # Media folders
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
+
+
+media_library:
+  name: "decap-media-library"  # or “uploadcare” if you want to use Uploadcare
+
 
 collections:
   - name: "products"
