--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: github
   repo: Flaming-31/flaming-reads-reimagined
   branch: main
-  # auth_endpoint: https://api.decapcms.org/auth
-  # app_id: Ov23liU4ThtPeGQhcTYl
+  auth_endpoint: https://api.decapcms.org/auth
+  app_id: Ov23liU4ThtPeGQhcTYl
 
 # Optional: Editorial workflow for content approval
 publish_mode: editorial_workflow
